change name myformik

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apptom123",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tommyOliveir.github.io/apptom123",
+  "homepage": "https://tommyOliveir.github.io/myformik",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
